fix display on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,6 +33,8 @@ pre {
 
 /* @end */
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 /* @group Baseline */
 body {
 	font-size: 14px;
@@ -85,7 +87,7 @@ table {
 /* @group Layout */
 
 #content {
-	width: 70em;
+	max-width: 60em;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -96,14 +98,14 @@ table {
 */
 
 #table-of-contents {
-	width: 15em;
+	max-width: 15em;
 	float: left;
 	overflow: auto;
 }
 
 /* #main { */
 div.outline-2 {
-        width: 52em;
+    max-width: 42em;
 	float: right;
 	/* The lines below are useful if the "main" div isn't available and
 	   div.outline-2 has to be used. */
@@ -116,7 +118,7 @@ div.outline-2 {
 }
 
 div.outline-2 pre {
-    width: 40em;
+    max-width: 30em;
     overflow: auto;
 }
 
